--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
 alembic==1.7.5
-email_validator==1.1.3
+click==8.0.3
+dnspython==2.1.0
+dominate==2.6.0
+email-validator==1.1.3
 Flask==2.0.2
-Flask_Bootstrap==3.3.7.1
-Flask_Login==0.5.0
-Flask_Migrate==3.1.0
-Flask_SQLAlchemy==2.5.1
-Flask_WTF==1.0.0
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+greenlet==1.1.2
+idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+Mako==1.1.6
+MarkupSafe==2.0.1
 SQLAlchemy==1.4.26
+visitor==0.1.3
 Werkzeug==2.0.2
 WTForms==3.0.0
